--- a/style.css
+++ b/style.css
@@ -83,7 +83,7 @@ button {
 
 .cta-generate {
 	border: none;
-	background-color: #c36cbb;
+	background-color: cornflowerblue;
 	margin: 20px;
 	width: 150px;
 	height: 50px;
